# UwianNa

./: .gitignore  README.md  index.html  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/components/: AutoDraw.tsx  History.tsx  NameInput.tsx  RemainingList.tsx  RigModal.tsx  Toast.tsx  TopBar.tsx  WinnerCard.tsx
src/utils/: random.ts  storage.ts
