[package]
name = "lucky-draw"
version = "0.1.0"
description = "Lucky Draw desktop app"
edition = "2021"

[build-dependencies]
tauri-build = "2.0.0"

[dependencies]
tauri = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
